2008-04-01  Julian Schnidder  <j.schnidder@gmx.de>

	* miscellaneous/perl.m: New function.
	* miscellaneous/Makefile.in (SOURCES): Add it to the list.

2008-03-31  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Set the tick direction in the main call
	the set tics rather than separately to avoid issues with multiple
	ticks in plotyy.
	
	* plot/gtext.m: New function to place text on a plot.
	* plot/waitforbuttonpress.m: New function.
	* plot/Makefile.in (SOURCES): Add them to the list.
	* plot/__gnuplot_ginput__.m: Bug fix for nargin==1. Workaround for
	missing mkfifo under Windows.
	* plot/ginput.m: Eliminate setting of n.
	
	* plot/ginput.m: New function.
	* plot/__gnuplot_ginput__.m: New function based on a version of
	ginput.m from Petr Mikulik <mikulik@physics.muni.cz>.
	* plot/Makefile.in (SOURCES): Add them to the list.

2008-03-31  Dmitri A. Sergatskov  <dasergatskov@gmail.com>

	* miscellaneous/run.m: Fix check for existence of file.

2008-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* general/lookup.m: Remove (lookup moved to DLD-FUNCTIONS).
	* general/Makefile.in (SOURCES): Delete lookup.m from the list.
	* general/interp1.m, general/interp2.m, general/interpn.m,
	polynomial/ppval.m: Fix buggy lookup calls.
	* general/interp1.m: New test.

2008-03-28  Thomas Weber  <thomas.weber.mail@gmail.com>

	* miscellaneous/tempdir.m: Use correct function name in texinfo
	documentation.

2008-03-28  Jaroslav Hajek  <highegg@gmail.com>

	* general/del2.m: Missing semicolon.

2008-03-28  Julian Schnidder  <j.schnidder@gmx.de>

	* miscellaneous/info.m: New function.
	* miscellaneous/Makefile.in (SOURCES): Add it to the list.

2008-03-27  Soren Hauberg  <hauberg@gmail.com>

	* plot/xlim.m, plot/ylim.m, plot/zlim.m, strings/strtrim.m:
	Doc fixes.

2008-03-27  David Bateman  <dbateman@free.fr>

	* plot/__plt2__.m: Test if args are empty first so that
	plot(zeros(1,0),zeros(1,0)) works as expected.
