@@ -13,6 +13,7 @@ David Billinghurst
 Don Bindner
 Jakub Bogusz
 Moritz Borgmann
+Richard Bovey
 Marcus Brinkmann
 Remy Bruno
 Marco Caliari
